--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "all": "^0.0.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "nth-check": "2.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
